resources/echo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-app
  namespace: default
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo-server-app
  template:
    metadata:
      labels:
        app: echo-server-app
    spec:
      containers:
      - image: ealen/echo-server:latest
        imagePullPolicy: IfNotPresent
        name: echoserver
        ports:
        - containerPort: 9080
        env:
        - name: PORT
          value: "9080"        
    # spec:
    #   containers:
    #   - name: echo-server-app
    #     image: docker.io/kicbase/echo-server:1.0
    #     ports:
    #     - containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: default
spec:
  ports:
    - port: 9080
      targetPort: 9080
      protocol: TCP
  type: ClusterIP
#  type: LoadBalancer
  selector:
    app: echo-server-app
---
