resources/envoy-bootstrap.yaml
admin:
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
dynamic_resources:
  lds_config:
    path_config_source:
      path: "./envoy-xds/lds.yaml"
      watched_directory:
        path: "./envoy-xds"
  cds_config:
    path_config_source:
      path: "./envoy-xds/cds.yaml"
      watched_directory:
        path: "./envoy-xds"
            
static_resources:                  
  listeners:
    - name: listener_http1
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - name: filter_chain_http
          filter_chain_match:
            destination_port: 8080
          filters:
            - name: http_gateway
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager                
                httpFilters:
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                      start_child_span: false             
                codec_type: HTTP1
                stat_prefix: "listener_http1.http_gateway_8080"
                route_config: 
                  name: basic_http_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/hello"
                          direct_response:                          
                            status: 200
                            body:
                              inline_string: "Hello from listener_http1 Envoy Gateway proudly deployed by Kubvernor"
                        - match:
                            prefix: "/"
                            headers:
                              - name: ":method"
                                exactMatch: "GET"
                          route:
                            cluster: cluster_http
                        - match:
                            prefix: "/"
                            headers:
                              - name: ":method"
                                exactMatch: "POST"
                          route:
                            cluster: cluster_http



  clusters:
    - name: cluster_http
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      common_lb_config:
        locality_weighted_lb_config: {}
        
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          upstream_http_protocol_options:
            auto_sni: true
          common_http_protocol_options:
            idle_timeout: 1s
          explicit_http_config:
             http_protocol_options:
               allow_absolute_url: true
              
      load_assignment:
        cluster_name: cluster_http
        endpoints:            
          - locality:
              region: europe
              zone: ireland
              sub_zone: dublin
            priority: 0
            load_balancing_weight: 1
            lb_endpoints:
              - endpoint:                  
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4001
                load_balancing_weight: 1
              - endpoint:                
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 4002
                load_balancing_weight: 1
