resources/gateway_one.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-one
  # finalizers:
  #   - kubevernor.com/proxy-controller
spec:
  gatewayClassName: kubvernor-gateway
  listeners:
  - name: http-1080
    protocol: HTTP
    port: 1080
  - name: tcp-1890
    protocol: TCP
    port: 1080
