resources/inference-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway
  # finalizers:
  #   - kubevernor.com/proxy-controller
spec:
  gatewayClassName: kubvernor-gateway
  listeners:
  - name: http-2080
    protocol: HTTP
    port: 2080
