resources/rds.yaml
version_info: "0"
resources:
- "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
  name: dynamic_route_1
  virtual_hosts:
  - name: backend
    domains:
    - "*"
    routes:      
      - match:
          prefix: "/hello"
        direct_response:                          
          status: 200
          body:
            inline_string: "Hello from listener_http3 Envoy Gateway proudly deployed by Kubvernor"
