resources/route-three.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-three
spec:
  parentRefs:
    - name: gateway-one
      port: 2080

  hostnames:
    - "www.example.com"
    - "www.example2.com"
  rules:
    - backendRefs:
        - name: no-echo-service
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /login
        - path:
            type: PathPrefix
            value: /data
