resources/ubuntu-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ubuntu-server-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ubuntu-server-app
  template:
    metadata:
      labels:
        app: ubuntu-server-app
    spec:
      containers:
      - name: ubuntu-server-app
        imagePullPolicy: IfNotPresent
        image: docker.io/ubuntu
        command:
          - "sleep"
          - "604800"
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: echo-service
#   namespace: default
# spec:
#   ports:
#     - port: 9080
#       targetPort: 9080
#       protocol: TCP
#   type: ClusterIP
# #  type: LoadBalancer
#   selector:
#     app: echo-server-app
---
